# model-web-service

./: README.md  github.txt  pyproject.toml  render.txt
app/backend/: constants.py  dockerfile  main.py  requirements.txt
app/backend/models/: prophet1.joblib  xgb_4.joblib
app/backend/service/: brief.py  forecast.py  predict.py
app/backend/transformers/: ordinal_encoder_1.joblib  scaler_1.joblib  target_mean_encoder_1.joblib
app/frontend/: app.py  constants.py  dockerfile  requirements.txt
app/frontend/data/: item_ids.json
app/frontend/service/: brief.py  forecast.py  predict.py  read_json.py
models/: xgb_1.joblib
transformers/: one_hot_encoder.joblib  ordinal_encoder.joblib  scaler.joblib
